syntax = "proto3";

package serval.word_alignment.v1;

import "google/protobuf/empty.proto";
import "Protos/serval/base/platform.proto";
import "Protos/serval/word_alignment/v1/engine.proto";

service WordAlignmentPlatformApi {
    rpc UpdateJobStatus(serval.base.UpdateJobStatusRequest) returns (google.protobuf.Empty);
    rpc JobStarted(serval.base.JobStartedRequest) returns (google.protobuf.Empty);
    rpc JobCompleted(serval.base.JobCompletedRequest) returns (google.protobuf.Empty);
    rpc JobCanceled(serval.base.JobCanceledRequest) returns (google.protobuf.Empty);
    rpc JobFaulted(serval.base.JobFaultedRequest) returns (google.protobuf.Empty);
    rpc JobRestarting(serval.base.JobRestartingRequest) returns (google.protobuf.Empty);

    rpc IncrementWordAlignmentEngineCorpusSize(IncrementWordAlignmentEngineCorpusSizeRequest) returns (google.protobuf.Empty);
    rpc InsertWordAlignments(stream InsertPreWordAlignmentsRequest) returns (google.protobuf.Empty);
}

message IncrementWordAlignmentEngineCorpusSizeRequest {
    string engine_id = 1;
    int32 count = 2;
}

message InsertPreWordAlignmentsRequest {
    string engine_id = 1;
    string corpus_id = 2;
    string text_id = 3;
    repeated string refs = 4;
    WordAlignmentResult word_alignment = 5;
}
